# tubetape

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  eslint.config.ts  index.html  package.json  playwright.config.ts  pyodide-ytdlp-wheels.md  tsconfig.json  vite.config.ts  vitest.config.ts
.github/instructions/: code-review.instructions.md
.github/workflows/: ci.yml  deploy-release.yml  merge-release.yml  publish-release.yml  release.yml  stage-release.yml
.ladle/: components.tsx  config.mjs  ladle.css  vite.config.ts
.ladle/test/: ladle.spec.ts
assets/TubeTape.icon/: icon.json
docs/: BUNDLE_RENAME.md  DAW_FEATURES.md  PHASE_4_IMPLEMENTATION.md  PIPELINE_REFACTOR.md  PROJECT_FLOW.md  PYODIDE_BUNDLING.md  PYODIDE_BUNDLING_COMPLETE.md  PYODIDE_RUNTIME_SETUP.md  REFINEMENT_SUMMARY.md  SUMMARY.md  WASM_ARCHITECTURE.md  WASM_IMPLEMENTATION_PLAN.md  WASM_INDEX.md  WASM_REFINEMENTS_SUMMARY.md  WASM_RESEARCH_SUMMARY.md  WASM_UNIFIED_DLOPEN_DESIGN.md  YTDLP_INTEGRATION.md  build-scripts.md  ffmpeg-library.md  pyodide-yt-dlp-guide.md
patches/: wavesurfer.js@7.12.1.patch
public/: jsc-sandbox.html
public/pyodide/: ssl-1.0.0-cp312-cp312-pyodide_2024_0_wasm32.whl  yt_dlp-2025.12.8-py3-none-any.whl
public/pyodide/patches/: dlopen_adapter.py  http_adapter.py  jsc_provider.py  loader.py
scripts/: build-ffmpeg.ts  build-quickjs.ts  bundle-yt-dlp.ts  fetch-github-release.ts  fetch-github-source.ts  fetch-sourceforge-source.ts  get-next-version.ts  setup-deno.ts  setup-ffmpeg.ts  setup-qjs.ts  setup-yt-dlp.ts  tsconfig.json
scripts/patches/: README.md
scripts/patches/ffmpeg/fftools/: ffmpeg_lib.c  ffmpeg_lib.h
scripts/patches/ffmpeg/fftools/graph/: graphprint_stub.c  graphprint_stub.h
src/: App.css  App.tsx  bindings.ts  db.ts  types.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  beat_detection.rs  binary.rs  deno.rs  ffmpeg.rs  ffmpeg_dlopen.rs  ffmpeg_runtime.rs  ffmpeg_shim.rs  http.rs  lib.rs  main.rs  youtube.rs
src-tauri/src/pipeline/: executor.rs  mod.rs
src/components/: CassetteTape.stories.tsx  CassetteTape.tsx  ErrorDialog.tsx  ProjectCombobox.stories.tsx  ProjectCombobox.tsx  SampleList.stories.tsx  SampleList.tsx  SampleWaveform.stories.tsx  SampleWaveform.tsx  SocialBanner.stories.tsx  SocialBanner.tsx  URLInput.stories.tsx  URLInput.tsx  VideoUnfurl.stories.tsx  VideoUnfurl.tsx  Waveform.stories.tsx  Waveform.tsx  ZoomSlider.stories.tsx  ZoomSlider.tsx
src/hooks/: useAppStats.spec.ts  useAppStats.ts  usePyodide.ts  useRegionPlayer.spec.ts  useRegionPlayer.ts
src/lib/: audioEngine.spec.ts  audioEngine.ts  db.spec.ts  db.ts  youtube.spec.ts  youtube.ts
src/test/: setup.ts
src/test/helpers/: audioBufferHelper.ts
src/test/mocks/: tauri-browser.ts  tauri.ts  webAudio.ts
src/wasm/: patches.spec.ts  pyodide-client.ts  pyodide-runtime.spec.ts  pyodide-worker.ts  pyodide-worker.ts.bak
