[package]
authors = ['you']
description = 'A Tauri App'
edition = '2021'
name = 'tubetape'
version = '0.2.0'

[lib]
crate-type = ['staticlib', 'cdylib', 'rlib']
name = 'tubetape_lib'

[build-dependencies]
[build-dependencies.tauri-build]
features = []
version = '2'

[dependencies]
dirs = '5'
lazy_static = '1'
regex = '1'
serde_json = '1'
sysinfo = '0.30'
tauri-plugin-dialog = '2'
tauri-plugin-fs = '2'
tauri-plugin-opener = '2'

[dependencies.reqwest]
features = ['json']
version = '0.12'

[dependencies.serde]
features = ['derive']
version = '1'

[dependencies.symphonia]
features = ['mp3', 'aac', 'ogg', 'wav', 'flac']
version = '0.5'

[dependencies.tauri]
features = []
version = '2'

[dependencies.tokio]
features = ['full']
version = '1'
