[package]
name = "tubetape"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tubetape_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
bindgen = "0.70"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "native-tls", "stream"] }
futures-util = "0.3"
regex = "1"
lazy_static = "1"
symphonia = { version = "0.5", features = ["mp3", "aac", "ogg", "wav", "flac"] }
dirs = "5"
sysinfo = "0.30"
libc = "0.2.178"
libloading = "0.8"
once_cell = "1.19"
aubio = { version = "0.2", features = ["builtin", "bindgen"] }

# Type-safe Tauri command bindings
specta = { version = "=2.0.0-rc.22", features = ["serde"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }

