[package]
authors = ['you']
description = 'A Tauri App'
edition = '2021'
name = 'tubetape'
version = '0.3.0'

[lib]
crate-type = ['staticlib', 'cdylib', 'rlib']
name = 'tubetape_lib'

[build-dependencies]
bindgen = '0.70'

[build-dependencies.tauri-build]
features = []
version = '2'

[dependencies]
dirs = '5'
futures-util = '0.3'
lazy_static = '1'
libc = '0.2.178'
libloading = '0.8'
once_cell = '1.19'
regex = '1'
serde_json = '1'
specta-typescript = '0.0.9'
sysinfo = '0.30'
tauri-plugin-dialog = '2'
tauri-plugin-fs = '2'
tauri-plugin-opener = '2'

[dependencies.aubio]
features = ['builtin', 'bindgen']
version = '0.2'

[dependencies.reqwest]
features = ['json', 'native-tls', 'stream']
version = '0.12'

[dependencies.serde]
features = ['derive']
version = '1'

[dependencies.specta]
features = ['serde']
version = '=2.0.0-rc.22'

[dependencies.symphonia]
features = ['mp3', 'aac', 'ogg', 'wav', 'flac']
version = '0.5'

[dependencies.tauri]
features = []
version = '2'

[dependencies.tauri-specta]
features = ['derive', 'typescript']
version = '=2.0.0-rc.21'

[dependencies.tokio]
features = ['full']
version = '1'
